# whatsapp-clone-rust

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  build.rs  cosign.key  cosign.pub  docker-compose.yaml  go.work  go.work.sum  prometheus.dev-config.yaml  schema.sql  schema.surql  trivy.yaml
.github/workflows/: main.yaml
backend/microservices/authentication/: .env  .env.dev  Dockerfile  config.rs  main.rs  utils.rs
backend/microservices/profile/: .env.dev  Dockerfile  main.rs  utils.rs
backend/outboxer/: Dockerfile  go.mod  go.sum  main.go  sample.config.yaml
backend/outboxer/adapters/: rabbitmq.go  surrealdb.go
backend/outboxer/config/: config.go
backend/outboxer/domain/: usecases.go
backend/outboxer/utils/: utils.go
cloud/: .terraform.lock.hcl  1.cluster.tf  4.vcluster.tf  argocd-application-manager.yaml  main.tf  others.tf
cloud/modules/prepare-cluster/: 1.argocd.tf  2.sealed-secrets-key.tf  3.atlas.tf
dockerfiles/: surrealdb-migrate.dockerfile
frontend/: .prettierrc  package.json  pnpm-lock.yaml  svelte.config.js
frontend/.storybook/: main.ts  preview.ts
kubernetes/: README.md
kubernetes/argocd/apps/: cilium.yaml  gateway-api.yaml  kubernetes-dashboard.yaml  roles.yaml
kubernetes/base/: application-controller.yaml  cockroachdb.yaml  kubernetes-dashboard.yaml  kustomization.yaml  microservices.yaml  opa-gatekeeper.yaml  rabbitmq.yaml  roles.yaml  surrealdb-migrate.yaml  surrealdb.yaml
kubernetes/base/application-controller/: cluster-role.yaml  deployment.yaml  kustomization.yaml  whatsappclone.io_applications.yaml
kubernetes/base/cockroachdb/: operator.yaml  (+2 more)
kubernetes/gateway-api/: main.gateway.yaml
kubernetes/operators/: go.mod  go.sum
protos/: authentication-microservice.proto  authentication.microservice.proto  events.proto  profile-microservice.proto
scripts/: operator-codegen.sh
(+95 files in other folders)
