[package]
name = "whatsapp-clone"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "authentication-microservice"
path = "./backend/microservices/authentication/main.rs"

[[bin]]
name = "profile-microservice"
path = "./backend/microservices/profile/main.rs"

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
async-trait = "0.1.74"
chrono = "0.4.31"
derive_more = { version = "0.99.17", features = ["constructor"], default-features = false }
dotenv = "0.15.0"
fake = "2.9.1"
jsonwebtoken = "9.1.0"
lazy_static = "1.4.0"
mockall = "0.11.4"
prost = "0.12.1"
rand = "0.8.5"
serde = "1.0.190"
surrealdb = "1.0.0"
test-context = "0.1.4"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = "0.7.10"
tonic = { version = "0.10.2", features = ["gzip"] }
tonic-reflection = "0.10.2"
uuid = "1.5.0"
validator = "0.16.1"

[build-dependencies]
tonic-build = "0.10.2"

[dev-dependencies]
test-context = "0.1.4"
